[package]
name = "fraction"
authors = ["zperk13"]
edition = "2021"
repository = "https://github.com/zperk13/fractions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"

[dev-dependencies]
paste = "1.0.7"
